<resources>
    <string name="app_name">ThisTimes</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sort">Sort</string>
    <string name="done">Done</string>
    <string name="begin_date">Begin Date</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="share_link">Share Link</string>
    <string name="generic_request_error">Unable to perform request. Please try again later.</string>
    <string name="error_too_many_requests">Too many requests. Please try again later.</string>
    <string name="error_max_num_pages">Sorry you have reached the maximum num of pages: %d</string>
    <string name="retry">Retry</string>
    <string name="error_no_network_connection">No Network Connection Detected</string>
    <string name="please_perform_a_search">Please perform a search.</string>
    <string name="no_search_result">Looks like that search has no results.</string>
</resources>
